fixed nav scroll on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -170,6 +170,7 @@ nav ul li a:hover {
   }
   .nav-container {
     position: fixed;
+    overflow: scroll;
     top: 0;
     left: 0;
     height: 100%;
@@ -245,6 +246,7 @@ nav ul li a:hover {
 #nav:checked ~ .nav-container {
   z-index: 9990;
   opacity: 1;
+  overflow: scroll;
 }
 #nav:checked ~ .nav-container ul li a {
   opacity: 1;
